Disble buildSearchableOptions task as it's broken now